--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
+    "pg": "^8.8.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.28.0",
     "validator": "^13.6.0",
     "xss-clean": "^0.1.1"
   },
